[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "PD", "NPY", "RUF", "S", "A", "C", "ICN", "PIE", "SIM", "PLC", "PLE", "PLR", "PLW", "PERF", "FURB"]
# "N", "D", "ARG"
ignore = ["B028", "PLR0913", "RUF012", "C901", "PLR0912", "PLR0915", "PD101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
