[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project]
name = "waltlabtools"
dynamic = ["version"]
dependencies = [
    "numpy>=1.11",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scikit-learn>=1.2",
]
requires-python = ">= 3.8"
authors = [
    {name = "Tyler Dougan", email = "tyler_dougan@hst.harvard.edu"}
]
description = "A collection of tools for biomedical research assay analysis in Python."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
jax = ["jax"]
numba = ["numba"]
all = [
    "jax",
    "numba",
    "jupyterlab",
    "numexpr",
    "bottleneck",
    "jinja2",
    "openpyxl",
    "xlrd",
]

[project.urls]
Homepage = "https://github.com/tylerdougan/waltlabtools/"
Documentation = "https://waltlabtools.readthedocs.io/en/latest/"
PyPI = "https://pypi.org/project/waltlabtools/"
"Issue Tracker" = "https://github.com/tylerdougan/waltlabtools/issues"
Anaconda = "https://anaconda.org/tylerdougan/waltlabtools"

[tool.setuptools.dynamic]
version = {attr = "waltlabtools.__version__"}

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "PD", "NPY", "RUF", "S", "A", "C", "ICN", "PIE", "SIM", "PLC", "PLE", "PLR", "PLW", "PERF", "FURB"]
ignore = ["B028", "PLR0913", "RUF012", "C901", "PLR0912", "PLR0915", "PD101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
