[metadata]
name = waltlabtools
version = 0.4.5
author = Tyler Dougan
description = A collection of tools for biomedical research assay analysis in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License v3 (GPLv3)
url = https://github.com/tylerdougan/waltlabtools
download_url = https://pypi.org/project/waltlabtools/#files
project_urls =
    Bug Tracker = https://github.com/tylerdougan/waltlabtools/issues
    Documentation = https://waltlabtools.readthedocs.io/README.html
    Conda = https://anaconda.org/tylerdougan/waltlabtools

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    numpy>=1.10
    scipy>=1.3
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
read_quanterix = pandas>=0.25
optional = scikit-learn>=0.21; pandas>=0.25; jax>=0.2
