[metadata]
name = waltlabtools
version = 1.0.0-beta.1
author = Tyler Dougan
author_email = tyler_dougan@hst.harvard.edu
description = A collection of tools for biomedical research assay analysis in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    python
    numpy
    modeling
    curve-fitting
    diagnostics
    biomedical-data-science
    calibration-curve
    assay
    elisa
    concentrations
    mosaic
license = GNU General Public License v3 (GPLv3)
url = https://github.com/tylerdougan/waltlabtools
download_url = https://pypi.org/project/waltlabtools/#files
project_urls =
    Bug Tracker = https://github.com/tylerdougan/waltlabtools/issues
    Documentation = https://waltlabtools.readthedocs.io/README.html
    Conda = https://anaconda.org/tylerdougan/waltlabtools

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires = 
    matplotlib>=3.3
    numpy>=1.16
    pandas>=0.25
    scipy>=1.3
    scikit-learn>=0.21
python_requires = >=3.6

[options.packages.find]
where = src